Fix some layout issues in IE7 and 8

--- a/stylesheets/sass/_base-extends.scss
+++ b/stylesheets/sass/_base-extends.scss
@@ -32,6 +32,9 @@
   }
 }
 
+.row-end {
+  margin-right: 0;
+}
 // For external links
 .external {
   padding-right:13px;
