--- a/stylesheets/sass/_base.scss
+++ b/stylesheets/sass/_base.scss
@@ -91,6 +91,7 @@ a {
 
   &:visited {
     color: darken($red, 5%);
+    text-decoration: none;
   }
 
   &:hover {
